# BizBrain

./: .gitignore  CONTRIBUTING.md  LICENSE  PRD.md  README.md  docker-compose.yml  manage.py  package-lock.json  package.json
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  alembic.ini  check_enums.py  deploy.sh  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.sh
backend/alembic/: env.py
backend/alembic/versions/: 003_change_name_to_username.py  004_change_id_to_uuid.py  39427d828889_add_config_field_to_workflow.py  3c658e49ced5_initial_migration.py  add_agent_type_column.py  add_workflow_execution_id.py  b026fb8bd42d_initial_migration.py  create_execution_logs.py  create_users_table.py  e1549478a4ab_merge_heads.py  e519abf51bf8_add_creator_id_to_agents.py  initial_migration.py  update_execution_logs_constraints.py  update_users_table.py  update_workflow_tasks.py
backend/app/: main.py
backend/app/api/: agents.py  auth.py  deps.py  workflows.py
backend/app/core/: auth.py  config.py  database.py  deps.py  init_db.py  security.py  test_db.py  utils.py
backend/app/crud/: knowledge.py
backend/app/db/: base.py  base_class.py  init_models.py  models.py  session.py
backend/app/models/: __init__.py  agent.py  execution_log.py  knowledge.py  task.py  task_log.py  user.py  workflow.py  workflow_execution.py  workflow_task.py
backend/app/schemas/: __init__.py  agent.py  auth.py  execution.py  knowledge.py  monitoring.py  (+7 more)
(+262 files in other folders)
